prevent chat message overflow out of messagesDiv
limit message content width to 95% of messagesDiv and wrap remaining
forcibly

--- a/plone_fb_comcentral/static/CC.css
+++ b/plone_fb_comcentral/static/CC.css
@@ -107,6 +107,7 @@ input.fb-message-input {
     -webkit-border-radius: 5px;
     -moz-border-radius:5px;
     border-radius: 5px;
+    max-width: 95%;
 }
 
 .chat-line-own {
